# ai-dungeon-master-bot

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
bot/: __main__.py
bot/core/: config.py  groq.py  loader.py
bot/core/prompts/: __init__.py  system_prompt.md
bot/handlers/: __init__.py  content.py  media.py  start.py
bot/prompts/: __init__.py
config/: .env.template
