[project]
name = "ai-dungeon-master-bot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.22.0",
    "groq>=1.0.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "I",
]

ignore = [
    "E501",
]

fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/tests/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
